tests/paczka1/fuzzy1/85138045.err
Error in line 4: pO4ZBmqbl A901 12,06
Error in line 20: 0sAfAKq9Y A901 56,7
Error in line 22: pO4ZBmqbl A901 60,9
Error in line 32: 2Hmkl S828 38,9
Error in line 35: pO4ZBmqbl A764 -1,5
